...
                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.65000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="AIa-zr-Eyr"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                <state key="normal" title="From:">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="E1S-sg-DHV" kind="show" id="g7F-pC-Tdh"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="1255.2" y="550.97451274362822"/>
        </scene>
        <!--Search-->
        <scene sceneID="2mN-dy-zT6">
            <objects>
                <tableViewController storyboardIdentifier="SearchViewController" title="Search" id="E1S-sg-DHV" customClass="SearchViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="hHW-Bu-bud">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" textLabel="Guw-eQ-W6i" detailTextLabel="v5A-8Y-0qJ" style="IBUITableViewCellStyleSubtitle" id="bah-N3-uf1">
...
